src/services/old/my-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-internal-service
  namespace: lab-services
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
