src/services/old/my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: lab-services
spec:
  selector:
    app: my-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
