src/services/old/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: lab-services
  annotations:
    # the url where the traffic must be redirected
    # https://kubernetes.github.io/ingress-nginx/examples/rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.clusterx.qedzone.ro
    http:
      paths:
      - path: /foo
        pathType: "Prefix"
        backend:
          service:
            name: my-internal-service
            port:
              number: 80
